--- a/README.org
+++ b/README.org
@@ -48,8 +48,9 @@ I'll try and log all breaking changes, including renaming functions and variable
    + Toggle between the header or footer mode line with =(bespoke/toggle-mode-line)= or
      disable the custom modeline altogether with =(bespoke/disable-custom-mode-line)=
    + Show git diff in modeline with =(bespoke-set-git-diff-mode-line)=
-   + Substitute any symbol for the major mode with =(bespoke-set-clean-mode-line)= (see
-     also the variable =(bespoke-mode-line-cleaner-alist)=
+   + Substitute any symbol for the major mode by setting
+     =(bespoke-set-mode-line-cleaner)= to 't' (see also the variable
+     =(bespoke-mode-line-cleaner-alist)=
 - There is a useful footer line visual alert "bell" inspired by [[https://github.com/hlissner/doom-emacs][DOOM emacs]]. To use
   include =(setq bespoke-set-visual-bell t)= in your setup of the theme.
 - You can set italics for keywords or comments (or both).
