--- a/README.org
+++ b/README.org
@@ -35,27 +35,13 @@ Suggestions and pull requests are welcome!
 
 I'll try and log all breaking changes, including renaming functions and variables here:
 
+- 10/19: Moved modeline to its own repo
 - 6/13: Normalized all modeline variable names from =bespoke...modeline= to =bespoke...mode-line= for consistency (commit: e119c0a)
 - 6/12: Renamed =bespoke-set-mode-line-height= to =bespoke-set-mode-line-size= (commit: a46b7b5)
 
   
 *** Options
 
-- There is an optional custom modeline, which may be set as a header line (similar to
-  [[https://github.com/rougier/nano-emacs][nano-emacs]]), or as the normal footer line, or the theme can make merely cosmetic
-  changes to the modeline. See the options for the =(bespoke-set-mode-line)= variable.
-   + You can set the size of the mode line with =(bespoke-set-mode-line-size)=
-   + Toggle between the header or footer mode line with =(bespoke/toggle-mode-line)= or
-     disable the custom modeline altogether with =(bespoke/disable-custom-mode-line)=
-   + Set the buffer status symbol in the modeline. This is configurable separately
-     for GUI and terminal. Default symbols are, respectively, read-only: (⨂)/(RO),
-     modified: (⨀)/(**), and read-write: (◯)/(RW).
-   + Show git diff in modeline with =(bespoke-set-git-diff-mode-line)=
-   + Substitute any symbol for the major mode by setting
-     =(bespoke-set-mode-line-cleaner)= to 't' (see also the variable
-     =(bespoke-mode-line-cleaner-alist)=
-- There is a useful footer line visual alert "bell" inspired by [[https://github.com/hlissner/doom-emacs][DOOM emacs]]. To use
-  include =(setq bespoke-set-visual-bell t)= in your setup of the theme.
 - You can set italics for keywords or comments (or both).
 - You can set variable-pitch for headlines using =(bespoke-set-variable-pitch)=.
 - There is a toggle function for toggling between light and dark theme variants:
@@ -74,18 +60,8 @@ packages, but you can of course install it from this repo however you wish.
 (use-package bespoke-themes
   :straight (:host github :repo "mclear-tools/bespoke-themes" :branch "main")
   :config
-  ;; Set header line
-  (setq bespoke-set-mode-line 'header)
-  ;; Set mode line height
-  (setq bespoke-set-mode-line-size 3)
-  ;; Show diff lines in modeline
-  (setq bespoke-set-git-diff-mode-line t)
-  ;; Set mode-line cleaner
-  (setq bespoke-set-mode-line-cleaner t)
   ;; Set evil cursor colors
   (setq bespoke-set-evil-cursors t)
-  ;; Use mode line visual bell
-  (setq bespoke-set-visual-bell t)
   ;; Set use of italics
   (setq bespoke-set-italic-comments t
         bespoke-set-italic-keywords t)
@@ -152,6 +128,8 @@ For dimming non-active windows try [[https://github.com/gonewest818/dimmer.el][d
 #+end_src
 
 *** Screenshots:
+
+Note that these all use bespoke-modeline 
 
 #+BEGIN_HTML
 <div>
