--- a/README.org
+++ b/README.org
@@ -1,9 +1,9 @@
 Bespoke-themes is a set of custom, medium contrast, light and dark themes for Emacs
-(intended for GUI, though basic support in terminal has been added), along with an
-optional custom modeline. This started as a fork of [[https://github.com/rougier][Nicolas Rougier's]] work on
-[[https://github.com/rougier/elegant-emacs][elegant-emacs]] and [[https://github.com/rougier/nano-emacs][nano-emacs]], but has evolved with some ideas and colors borrowed
-from [[https://material.io/design/color/the-color-system.html#color-theme-creation][material colors]], [[https://github.com/bbatsov/solarized-emacs][solarized]] and [[https://github.com/arcticicestudio/nord-emacs][nord]], as well as color design aided by [[https://coolors.co][coolers.co]]
-and the classic [[https://www.c82.net/werner/][Werner's Nomenclature]].
+(intended for GUI, though basic support in terminal has been added). There is also a
+related, and optional, [[https://github.com/mclear-tools/bespoke-modeline][custom modeline]]. This started as a fork of [[https://github.com/rougier][Nicolas Rougier's]]
+work on [[https://github.com/rougier/elegant-emacs][elegant-emacs]] and [[https://github.com/rougier/nano-emacs][nano-emacs]], but has evolved with some ideas and colors
+borrowed from [[https://material.io/design/color/the-color-system.html#color-theme-creation][material colors]], [[https://github.com/bbatsov/solarized-emacs][solarized]] and [[https://github.com/arcticicestudio/nord-emacs][nord]], as well as color design aided by
+[[https://coolors.co][coolers.co]] and the classic [[https://www.c82.net/werner/][Werner's Nomenclature]].
 
 The theme is notably less conservative/minimal than nano- or elegant-emacs, in
 the sense that it has a broader color palette and sets fewer configuration conditions
